created sign up screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,7 @@
                 android:layout_marginTop="90dp"
                 android:text="Register"
                 android:background="#e2edff"
+                android:onClick="registerButtonClicked"
                 />
 
         </LinearLayout>
