--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -44,7 +44,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:inputType="text"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -62,7 +63,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:inputType="text"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -80,7 +82,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:inputType="text"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -98,7 +101,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:inputType="phone"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -159,7 +163,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:inputType="textPassword"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -177,7 +182,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:inputType="textPassword"/>
             </LinearLayout>
             <Button
                 android:layout_marginTop="10dp"
