--- a/app/src/main/res/layout/activity_nfcscan.xml
+++ b/app/src/main/res/layout/activity_nfcscan.xml
@@ -5,12 +5,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -33,7 +33,20 @@
                 android:text="Scan a bike with NFC to start renting"
                 android:gravity="center"
                 android:layout_gravity="center"/>
+            <Button
+                android:id="@+id/accountinfo_button"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="90dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Account info"
+                android:background="#e2edff"
+                android:onClick="accountInfoButtonClicked"
+                />
         </LinearLayout>
+
 
     </ScrollView>
 
